# comfyui-ccip-judge

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
ccip_judge/: angle_score.py  ccip_score.py  common.py  deps.py  dwpose_runner.py  image_router.py  oks_score.py  pose_target.py  rejudge.py  score_overlay.py  three_stage_filter.py
docs/: JUDGE_AB_HANDOFF.md
examples/: ccip_judge_minimal.json
extras/: pose_check.py  rejudge_pose_methods.py
extras/optuna_search/: README.md  optuna_search.py  requirements.txt  search_space.example.yaml
tests/: conftest.py  pytest.ini  test_dwpose_anime_only.py  test_dwpose_runner.py  test_joint_visibility.py  test_node_wiring.py  test_oks_diag.py  test_pose_target.py  test_reference_validation.py  test_rejudge_cli.py  test_rejudge_contract.py  test_router_safety.py
