[project]
name = "comfyui-ccip-judge"
description = "Anime character image evaluation nodes (CCIP + OKS + Angle) for ComfyUI"
version = "0.5.0"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "dghs-imgutils>=0.19.0,<0.20.0",
  "onnxruntime",
  "huggingface_hub",
  "opencv-contrib-python",
  "numpy",
  "Pillow",
]

[project.urls]
Repository = "https://github.com/o-ankomochi-o/comfyui-ccip-judge"

[tool.comfy]
PublisherId = "ankomochi"
DisplayName = "CCIP Judge"
Icon = ""
